--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,8 @@
-asdfa
-asdf
-asdf
+name: My first GitHub Action
+on: [push]
+jobs:
+    print-hello-world:
+        runs-on: ubuntu-latest
+        steps:
+            - run: echo "Hello World!!!!"
+            - run: echo "This is step number 2"
