--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: My first GitHub Action
 on: [push]
 jobs:
-    print-hello-world:
+    build-app:
         runs-on: ubuntu-latest
         steps:
-            - run: echo "Hello World!!!!"
-            - run: echo "This is step number 2"
+            - uses: actions/checkout@v2
+            - run: tree
