--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
         "scripts": {
-                "start": "snowpack dev"
+                "start": "snowpack dev",
 				"build": "snowpack build"
         },
         "dependencies": {
